2009-10-02  Murray Cumming  <murrayc@murrayc.com>

	Maemo: Fix the build.
	
	* glom/frame_glom.cc:
	* glom/import_csv/dialog_import_csv.cc:
	* glom/import_csv/dialog_import_csv_progress.cc: Added no-exceptions ifdefs, 
	and corrected the hildonmm code.

1.12.1:

2009-10-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/utils.h|cc]: build_sql_select_fields_to_get(): 
	Removed the unused extra_join parameter.
	* glom/base_db.cc: Adapted.

2009-10-02  Murray Cumming  <murrayc@murrayc.com>

	Related Records: Fix doubly-related records portals, such as a list of 
	an Artist's publishers (via their albums).

	* glom/libglom/utils.[h|cc]: build_sql_select_with_where_clause(): 
	Move some code into build_sql_select_fields_to_get(), so we can get the 
	list of fields to get without the rest of the SQL.
	* glom/base_db.cc: set_found_set_where_clause_for_portal(): 
	Use build_sql_select_fields_to_get() to GROUP BY the full field list 
	instead of just the primary key, as required by recent PostgreSQL, 
	and probably by the SQL specification.
	We should investigate SELECT DISTINCT again to simplify this. 

2009-10-02  Michael Hasselmann  <michaelh@openismus.com>

	Import: Cleanup, added comments.

2009-10-01  Michael Hasselmann  <michaelh@openismus.com>

	Import: Made import working again, changed import logic

	* glom/import_csv/csv_parser.[h|cc] (fetch_next_row): This method allows
	iterating over the parser's cache without the need for a max row/column
	count. Potential issue with valid empty rows during import needs to be fixed.

	* glom/import_csv/dialog_import_csv.[h|cc]: Removed logic based on row counts.
	It turned out that most places didn't need access to get_row_count() anyway.

	* glom/import_csv/dialog_import_csv_progess.cc: Switched import to use the
	parser's new fetch_next_row() API. Not tested for large files yet.

2009-09-29  Murray Cumming  <murrayc@murrayc.com>

  Doubly-related Records: Correct the SQL.
  